--- a/mudi/src/main/resources/application.properties
+++ b/mudi/src/main/resources/application.properties
@@ -1,2 +1,9 @@
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/mudi
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
